# ResNet18-dataset-Training

./: README.md
1_CvSaveImg/samples/openCV_savePic/: CMakeLists.txt
1_CvSaveImg/samples/openCV_savePic/src/: main.cpp
2_MakeTrainDataText/: Train_list.txt  make_label_txt.py
3_ResNet18/: MyDataloader.py  cnn.py  test.py  utils.py  work.py
